# ipinfo-cli

./: Cargo.toml  README.md  build.rs
src/: app.rs  cli.rs  error.rs  ipinfo.rs  main.rs
