[package]
name = "ipinfo-cli"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2018"
description = "Get IP details from IPinfo.io"
license = "MIT"
build = "build.rs"

[build-dependencies]
structopt = "0.3.21"

[dependencies]
colored_json = "2.1.0"
derive_more = "0.99.11"
futures = "0.3.12"
http = "0.2.3"
hyper = { version = "0.14.4", features = ["client", "http1", "stream"] }
hyper-tls = "0.5.0"
serde = "1.0.123"
serde_json = { version = "1.0.62", features = ["preserve_order"] }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["macros"] }

[[bin]]
name = "ipinfo"
path = "src/main.rs"
